# server-api/src/main/resources/openapi.json
@@ -11,6 +11,46 @@
     }
   ],
   "paths": {
+    "/api/transaction/import/{userId}": {
+      "post": {
+        "tags": [
+          "transaction-import-controller"
+        ],
+        "operationId": "importBankStatementCsv",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/EncodedFileDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ImportResultDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/example/asfasf": {
       "get": {
         "tags": [
@@ -34,6 +74,94 @@
   },
   "components": {
     "schemas": {
+      "EncodedFileDto": {
+        "required": [
+          "base64Content",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "base64Content": {
+            "type": "string"
+          }
+        }
+      },
+      "ImportResultDto": {
+        "required": [
+          "detectedTransactions",
+          "errorMsg",
+          "name",
+          "success"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "success": {
+            "type": "boolean"
+          },
+          "errorMsg": {
+            "type": "string"
+          },
+          "detectedTransactions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TransactionDto"
+            }
+          }
+        }
+      },
+      "TransactionDetailsDto": {
+        "required": [
+          "bookingType",
+          "clientName",
+          "date",
+          "purpose",
+          "transactionAmount"
+        ],
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string"
+          },
+          "clientName": {
+            "type": "string"
+          },
+          "bookingType": {
+            "type": "string"
+          },
+          "purpose": {
+            "type": "string"
+          },
+          "transactionAmount": {
+            "type": "number",
+            "format": "double"
+          }
+        }
+      },
+      "TransactionDto": {
+        "required": [
+          "details",
+          "id",
+          "userId"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "string"
+          },
+          "details": {
+            "$ref": "#/components/schemas/TransactionDetailsDto"
+          }
+        }
+      },
       "HelloWorldDto": {
         "required": [
           "message"
